# lupus

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/lupus/: Cargo.toml
crates/lupus-web/: Cargo.toml
crates/lupus-web/src/: main.rs  sample.json  sample.txt  sample.xml  styles.css
crates/lupus/src/: artifact.rs  codec.rs  data.rs  engine.rs  error.rs  format.rs  lib.rs  markup.rs  schema.rs  transform.rs  validation.rs
crates/lupus/src/formats/: csv.rs  http_form.rs  json.rs  mod.rs  protobuf.rs  text.rs  xml.rs
