[workspace]
members = [
    "crates/lupus",
    "crates/lupus-web",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.88"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/code0-tech/lupus"
homepage = "https://github.com/code0-tech/lupus"
readme = "README.md"

[workspace.dependencies]
maud = "0.27.0"
serde_json = "1.0.149"
jsonschema = "0.46.6"
tucana = { version = "0.0.75", features = ["shared"] }
